Do not record Event.AsyncTargeting.ResponseTime when verifying results

We now count async verifying time in Event.AsyncTargeting.ResponseTime
and this is not expected. This patch excludes verifying data from the
metric.

Bug: 900638
Change-Id: Ida75dc486746f033d6f2563846e37ebf6ee00ee9
Reviewed-on: https://chromium-review.googlesource.com/c/1310453
Reviewed-by: Ria Jiang <riajiang@chromium.org>
Reviewed-by: Robert Kroeger <rjkroege@chromium.org>
Commit-Queue: Xianda Sun <sunxd@chromium.org>
Cr-Commit-Position: refs/heads/master@{#604379}
Former-commit-id: 00796e73b869e4a4fcc68f0f7ba35f6c54ef0073